--- a/delBook.css
+++ b/delBook.css
@@ -33,7 +33,7 @@ Body {
     }  
     
 
-    .sSR { 
+    .delBookBlock { 
     margin-left: 350px;
     margin-right: 350px;
     border: 3px solid #f1f1f1; 
